--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-face-snap></app-face-snap>
-<app-face-snap></app-face-snap>
+<app-face-snap [faceSnap]="mySnap"></app-face-snap>
+<app-face-snap [faceSnap]="mySnap2"></app-face-snap>
+<app-face-snap [faceSnap]="mySnap3"></app-face-snap>
+
